<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IN_box.ua</string>

    <!-- Bottom navigation -->
    <string name="bn_user_area">Кабинет</string>
    <string name="bn_catalog">Каталог</string>
    <string name="bn_trash">Корзина</string>
    <string name="bn_favorites">Избранное</string>
    <string name="bn_other">Больше</string>

    <!--Buttons-->
    <string name="bt_categories">Категории</string>


    <string name="title">Мрноговразовая маска ааві  авіао</string>
    <string name="price">450 грн.</string>
    <string name="category">Шапки, шарфы, курточки</string>
    <string name="add_to_cart">ДОБАВИТЬ В КОРЗИНУ</string>
    <string name="fragmentCart">Корзина</string>
    <string name="move_in_cart">добавить в корзину</string>

    <!-- other some function -->
</resources>
